Remove .DS_Store from repo and clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-#venv:
+# Virtual envs and build artifacts
 PIFsr/
-gitignore
-# Ignore data files
-data/*.npy
-
 __pycache__/
 *.pyc
+
+# Data files
+data/*.npy
+
+# macOS
+.DS_Store
